fixes issues with proposal  line items and code displaying as cut off (#192)

--- a/src/features/governance/components/styles.module.css
+++ b/src/features/governance/components/styles.module.css
@@ -49,6 +49,7 @@
 .proposal ol,
 .proposal ul {
   padding-left: 1rem;
+  margin-inline-start: 1rem;
 }
 
 .proposal ul {
@@ -60,14 +61,14 @@
 }
 
 .proposal li {
-  padding-left: 1rem;
+  padding-left: 0.6rem;
   margin-top: 0.6rem;
 }
 
 .proposal pre {
   padding: 0.5rem;
   background-color: rgba(0, 0, 0, 0.04);
-  overflow-x: hidden;
+  overflow-x: scroll;
 }
 
 .proposal img {
